--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "dependencies": {
     "ammo.js": "0.0.10",
+    "physijs-webpack": "^0.1.3",
     "react": "^16.11.0",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-animations": "^1.0.0",
     "react-dom": "^16.11.0",
+    "react-pose": "^4.0.10",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
@@ -37,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "worker-loader": "^2.0.0"
   }
 }
